--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vertical-floating-center-menu</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./page.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>vertical-floating-center-menu</title>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="./page.css">
 </head>
+
 <body class="page">
-    <h1>FF</h1>
-    <script src="./index.js"></script>
+	<nav id="navbar" class="nav">
+		<ul class="nav-list">
+			<li><a href="#welcome-section">About</a></li>
+			<li><a href="#projects">Work</a></li>
+			<li><a href="#design">Design</a></li>
+			<li><a href="#photos">Photos</a></li>
+			<li><a href="#contact">Contact</a></li>
+		</ul>
+	</nav>
+
+	<section id="welcome-section" class="welcome-section">
+		<h1>Vertical Floating Center Menu</h1>
+		<p>a Javascript developer</p>
+	</section>
+
+
+
+	<footer></footer>
+	<script src="./index.js"></script>
 </body>
+
 </html>
