--- a/fill-vertical-space.html
+++ b/fill-vertical-space.html
@@ -9,15 +9,26 @@
 </head>
 
 <body>
+	<ul class="vert-menu">
+		<li><a class="vert-menu__link" href="#main">Main</a></li>
+		<li><a class="vert-menu__link" href="#web">Web</a></li>
+		<li><a class="vert-menu__link" href="#design">Design</a></li>
+		<li><a class="vert-menu__link" href="#photos">Photos</a></li>
+	</ul>
 	<div class="container">
-		<ul class="vert-menu">
-			<li><a class="" href="#main">Main</a></li>
-			<li><a class="" href="#web">Web</a></li>
-			<li><a class="" href="#design">Design</a></li>
-			<li><a class="" href="#photos">Photos</a></li>
-		</ul>
-		<div class="box box-1">box 1</div>
-		<div class="box box-2">box 2</div>
+
+		<div class="box box-1">
+			<h2>BOX-1- Header</h2>
+		</div>
+		<div class="box box-2">
+			<h2>Сайты</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sapiente, quos, sequi sit deserunt cumque eius
+				quo, nisi hic excepturi commodi omnis id. Fugit neque voluptatum facere qui animi quibusdam.</p>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sapiente, quos, sequi sit deserunt cumque eius
+				quo, nisi hic excepturi commodi omnis id. Fugit neque voluptatum facere qui animi quibusdam.</p>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sapiente, quos, sequi sit deserunt cumque eius
+				quo, nisi hic excepturi commodi omnis id. Fugit neque voluptatum facere qui animi quibusdam.</p>
+		</div>
 		<div class="box box-design">box-design</div>
 		<div class="box box-3">box 3</div>
 	</div>
